# llamamoe-with-offload

datasets/: experiment.py  load_dataset.py
llama.cpp/: convert_hf_to_gguf.py
llama.cpp/common/: arg.cpp  arg.h  common.cpp  common.h
llama.cpp/ggml/: CMakeLists.txt
llama.cpp/ggml/include/: ggml-backend.h  ggml-cpu.h  ggml.h
llama.cpp/ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend.cpp  ggml.c
llama.cpp/ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c  ops.cpp  ops.h  repack.cpp  repack.h  vec.cpp
llama.cpp/gguf-py/gguf/: constants.py
llama.cpp/include/: llama.h
llama.cpp/src/: CMakeLists.txt  llama-context.cpp  llama-graph.cpp  llama-model-loader.cpp  llama-model-loader.h  llama-model.cpp  llama-model.h  llama.cpp
llama.cpp/tools/main/: CMakeLists.txt  main.cpp
script/: extract_tpot.py  opencompass_wic.py
