set(TARGET llama-cli)
add_executable(${TARGET} main.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_17)
if(MSVC)
    target_compile_options(${TARGET} PRIVATE /W0)
else()
    target_compile_options(${TARGET} PRIVATE -w)
endif()